# cindex

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
src/cindex/: cli.py
src/cindex/configs/: default-settings.yml  py-settings.yml  ts-settings.yml
src/cindex/utils/: read.py
